--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,13 @@
   </head>
 
   <body>
+  <nav>
+    <% if user_signed_in? %>
+      <!-- ログイン後のナビゲーションのリンクを表示 -->
+    <% else %>
+      <%= link_to '新規登録', new_user_registration_path %> |
+      <%= link_to 'ログイン', new_user_session_path %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
