--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,2 +1,12 @@
-<h1>介護福祉士への道へようこそ！</h1>
-
+<h1>介護福祉士になろう！</h1>
+<footer>
+  <nav>
+    <ul>
+      <li><%= link_to "ロードマップ", '#' %></li>
+      <li><%= link_to "補助金", '#' %></li>
+      <li><%= link_to "書類", '#' %></li>
+      <li><%= link_to "過去問", '#' %></li>
+      <li><%= link_to "単語帳", '#' %></li>
+    </ul>
+  </nav>
+</footer>
