--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -2,11 +2,11 @@
 <footer>
   <nav>
     <ul>
-      <li><%= link_to "ロードマップ", '#' %></li>
-      <li><%= link_to "補助金", '#' %></li>
-      <li><%= link_to "書類", '#' %></li>
-      <li><%= link_to "過去問", '#' %></li>
-      <li><%= link_to "単語帳", '#' %></li>
+      <li><%= link_to "ロードマップ", roadmap_path %></li>
+      <li><%= link_to "補助金", grants_path %></li>
+      <li><%= link_to "書類", user_documents_path(current_user) %></li>
+      <li><%= link_to "過去問", past_questions_path %></li>
+      <li><%= link_to "単語帳", flashcards_path %></li>
     </ul>
   </nav>
 </footer>
