補助金制度の検索画面ができた

--- a/app/views/past_questions/index.html.erb
+++ b/app/views/past_questions/index.html.erb
@@ -5,5 +5,5 @@
   <p>これから過去の試験を始めます。準備ができたらスタートボタンを押してください。</p>
 
   <!-- スタートボタン -->
-  <%= link_to 'スタート', '#', class: 'btn btn-primary' %>
+  <%= link_to 'スタート', start_past_question_path(@past_question), class: 'btn btn-primary' %>
 </div>
