--- a/app/views/first_page/index.html.erb
+++ b/app/views/first_page/index.html.erb
@@ -1,4 +1,9 @@
 <h1>介護福祉士への道へようこそ！!</h1>
 <p>介護福祉士への道のアプリに登録してくれてありがとうございます。</p>
 <p>初めに介護福祉士になる為に必要書類を見つけていくよ！</p>
-<p>当てはまる方の信託士を選んでね！</p>
+<p>当てはまる方の選択肢を選んでね！</p>
+<br>
+<br>
+<br>
+<%= link_to '高卒か一般大学卒', 'first_page/second_page', class: 'button-link' %>
+<%= link_to '福祉系大学卒か養成施設卒', 'first_page/third_page', class: 'button-link' %>
