--- a/app/views/grants/index.html.erb
+++ b/app/views/grants/index.html.erb
@@ -1,53 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>補助金検索ページ</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>補助金検索ページ</title>
 </head>
 <body>
-    <h1>補助金検索ページ</h1>
-    
-    <form id="searchForm">
-        <label for="keyword">キーワード:</label>
-        <input type="text" id="keyword" name="keyword">
-        <button type="button" onclick="searchGrants()">検索</button>
-    </form>
+  <h1>補助金検索ページ</h1>
+  <p>ここでは登録されている補助金の制度を探すことができるよ！</p>
+  <form id="searchForm" action="<%= grants_path %>" method="get">
+    <label for="keyword">キーワード:</label>
+    <input type="text" id="keyword" name="keyword">
+    <button type="submit">検索</button>
+  </form>
 
-    <div id="searchResults"></div>
+  <% if @grants %>
+  <div id="searchResults">
+    <h2>検索結果一覧:</h2>
+    <% @grants.each do |grant| %>
+      <p><%= grant['title'] %></p>
+    <% end %>
 
-    <script>
-        async function searchGrants() {
-            const keyword = document.getElementById('keyword').value;
-            const apiUrl = 'https://anypoint.mulesoft.com/mocking/api/v1/links';
+    <%= paginate @grants if @count > 8 %>
+  </div>
+<% elsif @error %>
+  <p><%= @error %></p>
+<% end %>
 
-            // クエリパラメータを使用して検索する場合
-            const urlWithParams = `${apiUrl}?keyword=${encodeURIComponent(keyword)}`;
-
-            try {
-                // リクエストを送信
-                const response = await fetch(urlWithParams);
-                const data = await response.json();
-
-                // レスポンスデータを処理
-                displaySearchResults(data);
-            } catch (error) {
-                console.error('Error fetching data:', error);
-            }
-        }
-
-        function displaySearchResults(results) {
-            const searchResultsDiv = document.getElementById('searchResults');
-            searchResultsDiv.innerHTML = ''; // 前回の結果をクリア
-
-            // レスポンスから結果を表示
-            results.links.forEach(result => {
-                const resultElement = document.createElement('div');
-                resultElement.textContent = result.title; // 実際のAPIレスポンスに基づいて適切なプロパティを指定
-                searchResultsDiv.appendChild(resultElement);
-            });
-        }
-    </script>
 </body>
 </html>
-
